# TheProjectPoseidon

./: README.md  app.py  cleaned_SIH_report_from_excel.csv  main.py  pandas_agent.py  pyproject.toml  requirements.txt
