[project]
name = "sih2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.10",
    "pandas>=2.3.2",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
]
